--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,9 @@
   position: fixed;
   z-index: 1010;
   user-select: none;
+  @media screen and (max-width: 1400px) {
+    display: none;
+  }
 }
 
 .header__navigation {
