--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,14 +3,17 @@
   padding-top: 99.57px;
   height: 100vh;
   max-height: 950px;
+  @media screen and (max-width: 1400px) {
+    display: none;
+  }
 }
 
 .hero__background {
   background-image: url(../images/bg1.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 0 90px;
+  background-size: cover;
+  background-position: center 90px;
 }
 
 .hero__line {
