--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,6 +6,9 @@
   background-color: rgba(0, 0, 0, 0.4);
   transition: 0.3;
   z-index: 2000;
+  @media screen and (max-width: 1400px) {
+    display: none;
+  }
 }
 
 .modal {
