--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -17,6 +17,9 @@
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: rgb(249, 249, 249);
+  @media screen and (max-width: 1400px) {
+    display: none;
+  }
 }
 
 .portfolio__title {
