--- a/sass/components/_price.scss
+++ b/sass/components/_price.scss
@@ -5,6 +5,9 @@
   padding: 200px 0;
   background-color: rgb(249, 249, 249);
   animation: price-animation 2s infinite alternate ease-in-out;
+  @media screen and (max-width: 1400px) {
+    display: none;
+  }
 }
 
 @keyframes price-animation {
