--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,4 +8,5 @@
 @import "./components/price";
 @import "./components/team";
 @import "./components/modal";
+@import "./components/mobile";
 @import "./utils/base";
